# bot-fine-tuning

./: .gitignore  README.md  main.py  main_inference.py  main_train.py  make_ollama_compatible.py  pyproject.toml
notebook/: 01_data_exploration.ipynb
src/data_load/: dataset.py
src/fine_tuning/: config.py  inference.py  mlflow_utils.py  model.py  trainer.py
src/prompts/: prompts.py
