[project]
name = "miguel-bot-finetuning"
version = "0.1.0"
description = "Fine-tuning Qwen3.5 con Unsloth"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "unsloth",
    "unsloth_zoo",
    "torch",
    "datasets",
    "trl",
    "mlflow,
]
